# closure2fp

./: CMakeLists.txt  README.md  closure.c  closure.h  lib.c  lib.h  main.c  main.cpp  main2.c  main2.cpp  main_bad.c  main_bad.cpp
